// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders an empty exercise 1`] = `
<div>
  <section />
</div>
`;

exports[`renders an exercise 1`] = `
<div>
  <section>
    <span
      class="sc-aYaIB sc-fqkwJk bsgqfj kSlkhS"
    >
      a
    </span>
    <span
      class="sc-aYaIB bsgqfj"
    >
      b
    </span>
  </section>
</div>
`;

exports[`renders an exercise 2`] = `
<div>
  <section>
    <span
      class="sc-aYaIB sc-gEvDqW bsgqfj kkLXkB"
    >
      a
    </span>
    <span
      class="sc-aYaIB sc-eqUzNf bsgqfj gjxXIO"
    >
      b
    </span>
  </section>
</div>
`;
